[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["29th-Day"]
build = "build.rs"
links = "kernel"

[lib]
name = "kernel"
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.71.1"

[profile]
dev.panic = "abort"
release.panic = "abort"


[dependencies]
wut = { path = "../wut" }
