[package]
name = "kernel"
version = "0.3.1"
edition = "2021"
authors = ["29th-Day"]
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/kernel"
publish = false
build = "build.rs"
links = "kernel"

[lib]
name = "kernel"
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.1" }
